@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX S21FE</RomName>
-  <VersionName>20230502 Update</VersionName>
-  <BuildNumber type="integer">20230502</BuildNumber>
-  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a71-20230502/OTA-20230502-a71.zip</DownloadURL>
+  <VersionName>20230601 Update</VersionName>
+  <BuildNumber type="integer">20230601</BuildNumber>
+  <DownloadURL>https://xmel8g.bl.files.1drv.com/y4mi_cwsMMgnh05Sr2hBMv9Qoh4f109_luyQcRUFkhMhPcAT9vo6neKHrO9Un0Zz-PVJmD_FSNYb5wSAfOF_e9UwMDHr4vW3X7zLdFLGAsiNQkMAsBpCr_GgLETHXuVnHzNC5KzMJyr-xBC6kawfPFlz4u7spbMe-bdIByT5ng_wF9n5wOuuJULmM10pusBJQdmA4dCEQHo4lm2HkyVA_R3Qw/OTA-20230601-a71.zip</DownloadURL>
   <AndroidVer>13</AndroidVer>
   <OneUIVer>5.1</OneUIVer>
-  <CheckMD5>4144b5b06f768d6805de4f9a329a16f7</CheckMD5>
-  <FileSize type="long">28279450</FileSize>
+  <CheckMD5>f7b3346fe753532f6c9ff29a692b5aaa</CheckMD5>
+  <FileSize type="long">990000000</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
-  <ChangelogHeader>https://i.ibb.co/92RxppQ/changelogheader1100.png</ChangelogHeader>
+  <ChangelogHeader>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/1035d72bc45728992d5ba59b44915635765ab8f6/banner.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/main/a71/changelog.txt</ChangelogURL>
 </OnOTAInfo>
